--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,13 @@
+backcall==0.1.0
+decorator==4.4.1
+defusedxml==0.6.0
+diff-match-patch==20181111
 dj-database-url==0.5.0
 Django==2.2.6
 django-decouple==2.1
+django-geojson==2.12.0
 django-heroku==0.3.1
+django-import-export==1.2.0
 django-leaflet==0.24.0
 django-location-field==2.1.0
 django-watson==1.5.2
@@ -10,11 +16,29 @@ et-xmlfile==1.0.1
 geographiclib==1.49
 geopy==1.20.0
 gunicorn==19.9.0
+ipython==7.11.1
+ipython-genutils==0.2.0
 jdcal==1.4.1
+jedi==0.16.0
+jsonfield==2.0.2
+kwargs==1.0.1
+MarkupPy==1.14
+odfpy==1.4.0
 openpyxl==2.6.2
+parso==0.6.0
+pexpect==4.8.0
+pickleshare==0.7.5
+prompt-toolkit==3.0.3
 psycopg2==2.8.3
+ptyprocess==0.6.0
+Pygments==2.5.2
 pytz==2019.1
+PyYAML==5.2
 six==1.12.0
 sqlparse==0.3.0
+tablib==0.14.0
+traitlets==4.3.3
+wcwidth==0.1.8
 whitenoise==4.1.2
 xlrd==1.2.0
+xlwt==1.3.0
